<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inroduction"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_types"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What are Data Types :"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_data_types"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:theme="@style/card_design"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="x = 5"
                android:textSize="20sp"
                android:textColor="#ffff"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_data_types2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardCornerRadius="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:theme="@style/card_design"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/note_the_type_function_in_python_returns_the_type_of_the_passed_variable"
                android:textSize="18sp"
                android:textColor="#ffff"
                android:paddingLeft="20dp"
                android:paddingTop="7dp"/>


        </androidx.cardview.widget.CardView>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Numbers :"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/numbers"
            android:textSize="20sp" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:cardCornerRadius="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:theme="@style/card_design"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_example"
                android:textSize="20sp"
                android:textColor="#ffff"
                android:paddingLeft="20dp"
                android:paddingTop="7dp"/>


        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sequence Type :"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/sequence_type"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="85dp"
            app:cardCornerRadius="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:theme="@style/card_design"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/detail"
                android:textSize="20sp"
                android:textColor="#ffff"
                android:paddingLeft="20dp"
                android:paddingTop="7dp"/>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Boolean :"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/bool"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set Type :"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/set"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dictionary :"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/dictionary"
            android:textSize="20sp" />









    </LinearLayout>
</ScrollView>